@@ -84,7 +84,11 @@
 #using more counters than hadoop configured limit
 #pig.disable.counter=true
 
-# Use this option to turn on UDF timers. This will cause two 
+# By default, pig will allow 1GB of data to be replicated using
+# the distributed cache when doing fragment-replicated join.
+# pig.join.replicated.max.bytes=1000000000
+
+# Use this option to turn on UDF timers. This will cause two
 # counters to be tracked for every UDF and LoadFunc in your script:
 # approx_microsecs measures approximate time spent inside a UDF
 # approx_invocations reports the approximate number of times the UDF was invoked
